--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,4 +16,7 @@ RUN apt-get update && \
     pip install --upgrade pip && \
     pip install -r requirements.txt
 
-CMD ["gunicorn", "--access-logfile", "-", "--error-logfile", "-", "-w", "4", "-b", "0.0.0.0:8080", "app:app"]
+# CMD ["gunicorn", "--access-logfile", "-", "--error-logfile", "-", "-w", "4", "-b", "0.0.0.0:8080", "app:app"]
+EXPOSE 8080
+
+ENTRYPOINT ["python", "app.py"]
