--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,6 @@ gunicorn==20.0.4
 pymongo==3.11.0
 Flask-PyMongo==2.3.0
 prometheus-flask-exporter
+opentracing==2.4.0
+jaeger-client==4.3.0
+Flask-OpenTracing==1.1.0
