--- a/frontend/requirements.txt
+++ b/frontend/requirements.txt
@@ -8,3 +8,9 @@ prometheus-flask-exporter
 opentracing==2.4.0
 jaeger-client==4.3.0
 Flask-OpenTracing==1.1.0
+opentelemetry-api
+opentelemetry-sdk
+opentelemetry-instrumentation
+opentelemetry-instrumentation-flask
+opentelemetry-instrumentation-requests
+opentelemetry-exporter-jaeger
